// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav Matches snapshot with multiple accounts links 1`] = `
<nav
  aria-label="My account"
  className="nav myAccount"
>
  <h2
    className="myAccountHeading"
  >
    My account
  </h2>
  <div
    className="menuWrapper"
  >
    <ul
      className="menuList"
      role="menu"
    >
      <li
        key="https://accounts.nice.org.uk/profile"
        role="presentation"
      >
        <a
          className="link"
          href="https://accounts.nice.org.uk/profile"
          role="menuitem"
        >
          Joe Bloggs
        </a>
      </li>
      <li
        key="https://accounts.nice.org.uk/signout"
        role="presentation"
      >
        <a
          className="link"
          href="https://accounts.nice.org.uk/signout"
          role="menuitem"
        >
          Sign out
        </a>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`Nav Matches snapshot with no accounts links 1`] = `
<div
  className="wrapper"
  id="header-menu"
>
  <nav
    className="nav"
  >
    <div
      className="menuWrapper"
    >
      <ul
        aria-labelledby="header-menu-button"
        className="menuList"
        role="menu"
      >
        <li
          key="link1"
          role="presentation"
        >
          <a
            aria-current={null}
            className="link"
            href="https://url1/"
            role="menuitem"
          >
            <span>
              First link
            </span>
          </a>
        </li>
        <li
          key="link2"
          role="presentation"
        >
          <a
            aria-current={null}
            className="link"
            href="https://url2/"
            role="menuitem"
          >
            <span>
              <abbr
                title="Abbreviation title"
              >
                Second link
              </abbr>
            </span>
          </a>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`Nav Matches snapshot with single accounts link 1`] = `
<nav
  aria-label="My account"
  className="nav myAccount"
>
  <div
    className="menuWrapper"
  >
    <ul
      className="menuList"
      role="menu"
    >
      <li
        key="https://accounts.nice.org.uk/"
        role="presentation"
      >
        <a
          className="link"
          href="https://accounts.nice.org.uk/"
          role="menuitem"
        >
          Sign in
        </a>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`Nav Matches snapshot with sub links for selected service 1`] = `
<Nav
  accountsData={null}
  isExpanded={false}
  service="link2"
>
  <div
    className="wrapper wrapperWithSubLinks"
    id="header-menu"
  >
    <nav
      className="nav"
    >
      <div
        className="menuWrapper"
      >
        <ul
          aria-labelledby="header-menu-button"
          className="menuList"
          role="menu"
        >
          <li
            key="link1"
            role="presentation"
          >
            <a
              aria-current={null}
              className="link"
              href="https://url1/"
              role="menuitem"
            >
              <span>
                First link
              </span>
            </a>
          </li>
          <li
            key="link2"
            role="presentation"
          >
            <a
              aria-current={true}
              className="link"
              href="https://url2/"
              role="menuitem"
            >
              <span>
                <abbr
                  title="Abbreviation title"
                >
                  Second link
                </abbr>
              </span>
            </a>
            <SubNav
              links={
                Array [
                  Object {
                    "href": "/",
                    "text": "Sub link 1",
                  },
                  Object {
                    "href": "/test",
                    "text": "Sub link 2",
                  },
                ]
              }
              text="Second link"
            >
              <div
                className="wrapper"
              >
                <ul
                  aria-label="Second link links"
                  className="list"
                >
                  <li
                    key="0"
                  >
                    <a
                      aria-current="page"
                      className="link"
                      href="/"
                      role="menuitem"
                    >
                      Sub link 1
                    </a>
                  </li>
                  <li
                    key="1"
                  >
                    <a
                      aria-current={null}
                      className="link"
                      href="/test"
                      role="menuitem"
                    >
                      Sub link 2
                    </a>
                  </li>
                </ul>
              </div>
            </SubNav>
          </li>
        </ul>
      </div>
    </nav>
  </div>
</Nav>
`;
